# plotter-nodes

./: .gitignore  AGENTS.md  Makefile  README.md  init.md  pyproject.toml
.claude/: settings.json
_tasks/_complete/2026-03-18_density-targets-and-flow-fields/: 2026-03-18_implementation-guide.md
docs/: vision.md
docs/pipeline/: 01-landmark-detection.md  02-region-masks.md  03-distance-fields.md  04-influence-maps.md  05-combination.md  06-face-contour.md  07-luminance-target.md  08-density-composition.md  09-edge-tangent-field.md  10-flow-fields.md  11-lic-visualization.md  12-export-bundle.md  13-complexity-map.md  README.md  architecture.md
docs/server/: integration-guide.md
scripts/: run_pipeline.py
src/portrait_map_lab/: __init__.py  combine.py  complexity_map.py  compose.py  distance_fields.py  etf.py  export.py  face_contour.py  face_regions.py  flow_fields.py  flow_speed.py  landmarks.py  lic.py  luminance.py  masks.py  models.py  pipelines.py  remap.py  segmentation.py  storage.py  viz.py
src/portrait_map_lab/server/: __init__.py  app.py  cache.py  config.py  (+4 more)
tests/: conftest.py  test_cache.py  test_combine.py  test_complexity_map.py  test_complexity_pipeline.py  test_compose.py  test_contour_pipeline.py  test_distance_fields.py  test_etf.py  test_export.py  test_face_contour.py  test_face_regions.py  test_flow_fields.py  test_flow_speed.py  test_landmarks.py  test_lic.py  test_luminance.py  test_masks.py  test_models.py  test_pipelines.py  test_previews.py  test_remap.py  test_resolver.py  test_segmentation.py  test_server.py  test_viz_flow.py
(+16 files in other folders)
