[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portrait-map-lab"
version = "0.1.0"
description = "Portrait feature distance mapping pipeline for pen plotter artwork"
requires-python = ">=3.10"
dependencies = [
    "mediapipe",
    "opencv-python",
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
