[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portrait-map-lab"
version = "0.1.0"
description = "Portrait feature distance mapping pipeline for pen plotter artwork"
requires-python = ">=3.10"
dependencies = [
    "mediapipe",
    "opencv-python",
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest",
    "ruff",
    "httpx>=0.28",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
